testdata/fixtures/audit/positive/exec_user_input_js_child_process.js
const child_process = require("child_process");

function runCommand(cmd) {
  child_process.exec(cmd);
}
