testdata/fixtures/audit/negative/exec_user_input_neg_unrelated_identifier_js.js
function doSomething() {
  return 42;
}

const exec = doSomething();
console.log(exec);
